projects/spats/test/Adapter_Trimming/Positive/RRRY.sam
@HD	VN:1.0	SO:unsorted
@SQ	SN:Barcoded_AATT	LN:112
@PG	ID:Bowtie	VN:0.12.8	CL:"bowtie -q --sam --allow-contain -v 0 -X 2000 -p 2 Positive/tmp/targets -1 Positive/RRRY_1.fq -2 Positive/RRRY_2.fq Positive/RRRY.sam"
1	163	Barcoded_AATT	1	255	31M	=	82	112	GGACAAGCAATGCTTGCCTTGATGTTGAACT	##,5,,,++########6++6+###+#####	XA:i:0	MD:Z:31	NM:i:0
1	83	Barcoded_AATT	82	255	31M	=	1	-112	GATCCAATTAAATCGGGCTTCGGTCCGGTTC	##########5#CCEEC>>@@@@<@@@>><=	XA:i:0	MD:Z:31	NM:i:0
3	163	Barcoded_AATT	82	255	31M	=	82	31	GATCCAATTAAATCGGGCTTCGGTCCGGTTC	##,5,,,++########6++6+###+#####	XA:i:0	MD:Z:31	NM:i:0
3	83	Barcoded_AATT	82	255	31M	=	82	31	GATCCAATTAAATCGGGCTTCGGTCCGGTTC	##########5#CCEEC>>@@@@<@@@>><=	XA:i:0	MD:Z:31	NM:i:0
4	77	*	0	0	*	*	0	0	GAACCGGACCGAAGCCCGATTTAATTGGATA	=<>>@@@<@@@@>>CEECC#5##########	XM:i:0
4	141	*	0	0	*	*	0	0	ATCCAATTAAATCGGGCTTCGGTCCGGTTCA	##,5,,,++########6++6+###+#####	XM:i:0
2	163	Barcoded_AATT	81	255	31M	=	82	32	GGATCCAATTAAATCGGGCTTCGGTCCGGTT	##,5,,,++########6++6+###+#####	XA:i:0	MD:Z:31	NM:i:0
2	83	Barcoded_AATT	82	255	31M	=	81	-32	GATCCAATTAAATCGGGCTTCGGTCCGGTTC	##########5#CCEEC>>@@@@<@@@>><=	XA:i:0	MD:Z:31	NM:i:0
5	77	*	0	0	*	*	0	0	GAACCGGACCGAAGCCCGATTTAATTAGATC	=<>>@@@<@@@@>>CEECC#5##########	XM:i:0
5	141	*	0	0	*	*	0	0	AATTAAATCGGGCTTCGGTCCGGTTCATTTA	##,5,,,++########6++6+###+#####	XM:i:0
6	163	Barcoded_AATT	91	255	22M	=	91	22	AAATCGGGCTTCGGTCCGGTTC	##,5,,,++########6++6+	XA:i:0	MD:Z:22	NM:i:0
6	83	Barcoded_AATT	91	255	22M	=	91	22	AAATCGGGCTTCGGTCCGGTTC	#5#CCEEC>>@@@@<@@@>><=	XA:i:0	MD:Z:22	NM:i:0
7	163	Barcoded_AATT	95	255	18M	=	95	18	CGGGCTTCGGTCCGGTTC	##,5,,,++########6	XA:i:0	MD:Z:18	NM:i:0
7	83	Barcoded_AATT	95	255	18M	=	95	18	CGGGCTTCGGTCCGGTTC	CEEC>>@@@@<@@@>><=	XA:i:0	MD:Z:18	NM:i:0
