projects/spats/test/Adapter_Trimming/Negative/YYYR.sam
@HD	VN:1.0	SO:unsorted
@SQ	SN:Barcoded_AATT	LN:112
@PG	ID:Bowtie	VN:0.12.8	CL:"bowtie -q --sam --allow-contain -v 0 -X 2000 -p 2 Negative/tmp/targets -1 Negative/YYYR_1.fq -2 Negative/YYYR_2.fq Negative/YYYR.sam"
8	163	Barcoded_AATT	1	255	31M	=	82	112	GGACAAGCAATGCTTGCCTTGATGTTGAACT	##,5,,,++########6++6+###+#####	XA:i:0	MD:Z:31	NM:i:0
8	83	Barcoded_AATT	82	255	31M	=	1	-112	GATCCAATTAAATCGGGCTTCGGTCCGGTTC	##########5#CCEEC>>@@@@<@@@>><=	XA:i:0	MD:Z:31	NM:i:0
9	163	Barcoded_AATT	81	255	31M	=	82	32	GGATCCAATTAAATCGGGCTTCGGTCCGGTT	##,5,,,++########6++6+###+#####	XA:i:0	MD:Z:31	NM:i:0
9	83	Barcoded_AATT	82	255	31M	=	81	-32	GATCCAATTAAATCGGGCTTCGGTCCGGTTC	##########5#CCEEC>>@@@@<@@@>><=	XA:i:0	MD:Z:31	NM:i:0
10	163	Barcoded_AATT	82	255	31M	=	82	31	GATCCAATTAAATCGGGCTTCGGTCCGGTTC	##,5,,,++########6++6+###+#####	XA:i:0	MD:Z:31	NM:i:0
10	83	Barcoded_AATT	82	255	31M	=	82	31	GATCCAATTAAATCGGGCTTCGGTCCGGTTC	##########5#CCEEC>>@@@@<@@@>><=	XA:i:0	MD:Z:31	NM:i:0
11	77	*	0	0	*	*	0	0	GAACCGGACCGAAGCCCGATTTAATTGGATA	=<>>@@@<@@@@>>CEECC#5##########	XM:i:0
11	141	*	0	0	*	*	0	0	ATCCAATTAAATCGGGCTTCGGTCCGGTTCT	##,5,,,++########6++6+###+#####	XM:i:0
13	77	*	0	0	*	*	0	0	GAACCGGACCGAAGCCCGATTTAGATCGGAA	=<>>@@@<@@@@>>CEECC#5##########	XM:i:0
13	141	*	0	0	*	*	0	0	AAATCGGGCTTCGGTCCGGTTCTAAAAGATC	##,5,,,++########6++6+###+#####	XM:i:0
12	77	*	0	0	*	*	0	0	GAACCGGACCGAAGCCCGATTTAATTAGATC	=<>>@@@<@@@@>>CEECC#5##########	XM:i:0
12	141	*	0	0	*	*	0	0	TTTAGAACCGGACCGAAGCCCGATTTAATTA	##,5,,,++########6++6+###+#####	XM:i:0
14	77	*	0	0	*	*	0	0	GAACCGGACCGAAGCCCGAGATCGGAAGAGC	=<>>@@@<@@@@>>CEECC#5##########	XM:i:0
14	141	*	0	0	*	*	0	0	CGGGCTTCGGTCCGGTTCTAAAAGATCGGAA	##,5,,,++########6++6+###+#####	XM:i:0
